--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,35 @@
-version '1.0-SNAPSHOT'
+plugins {
+    id 'java'
+    id "idea"
+}
+
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
 repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
-buildscript {
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-
-    dependencies {
-        classpath("net.serenity-bdd:serenity-gradle-plugin:2.2.0")
-    }
+ext {
+    cucumberVersion = '7.6.0'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'net.serenity-bdd.aggregator'
-apply plugin: 'maven-publish'
+dependencies() {
+    implementation 'org.seleniumhq.selenium:selenium-java:4.5.3'
+    implementation "io.cucumber:cucumber-java:$rootProject.ext.cucumberVersion"
+    implementation "io.cucumber:cucumber-testng:$rootProject.ext.cucumberVersion"
+    implementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
+    testImplementation 'org.testng:testng:7.6.1'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
+}
 
-dependencies {
-    implementation('net.serenity-bdd:serenity-screenplay-webdriver:2.2.0')
-    implementation('net.serenity-bdd:serenity-screenplay:2.2.0')
-    implementation('net.serenity-bdd:serenity-cucumber5:2.2.0')
-    implementation('net.serenity-bdd:serenity-junit:2.2.0')
-    implementation('net.serenity-bdd:serenity-core:2.2.0')
-    implementation('io.cucumber:cucumber-junit:5.5.0')
-    implementation('io.cucumber:cucumber-core:5.5.0')
-    testImplementation('net.serenity-bdd:serenity-junit:2.2.0')
-    testImplementation('net.serenity-bdd:serenity-core:2.2.0')
-    testImplementation('org.slf4j:slf4j-simple:1.7.7')
-    testImplementation('junit:junit:4.12')
+test {
+    useTestNG() {
+        useDefaultListeners = true
+        suites 'src/test/java/runners/testng.xml'
+        outputDirectory = file("$projectDir/AutomationReport")
+    }
+    scanForTestClasses = false
+    testLogging.showStandardStreams = true
+    //maxParallelForks = Runtime.runtime.availableProcessors() - 1
 }
