--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies() {
     implementation "io.cucumber:cucumber-java:$rootProject.ext.cucumberVersion"
     implementation "io.cucumber:cucumber-testng:$rootProject.ext.cucumberVersion"
     implementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
+    implementation 'org.testng:testng:7.1.0'
+    implementation 'org.testng:testng:7.1.0'
     testImplementation 'org.testng:testng:7.6.1'
     testImplementation 'org.assertj:assertj-core:3.23.1'
 }
@@ -31,5 +33,4 @@ test {
     }
     scanForTestClasses = false
     testLogging.showStandardStreams = true
-    //maxParallelForks = Runtime.runtime.availableProcessors() - 1
 }
